fix video on mobile

--- a/landing-page/public/css/style.purified.css
+++ b/landing-page/public/css/style.purified.css
@@ -1904,8 +1904,16 @@ margin-left: 160px;
 /* tablet */
 /* mobile phone */}
  body section.book iframe {
+display: block;
 margin: 84px auto;
-display: block;}
+/* tablet */
+/* mobile phone */
+width: 509px;
+/* tablet */
+/* mobile phone */
+height: 281px;
+/* tablet */
+/* mobile phone */}
   body section.subscribe {
  color: #FFC153;
  padding: 60px 30px;
@@ -2222,6 +2230,42 @@ left: 4px;}
 @media all and (max-width: 767px) {
   body section.book img {
  margin-left: 50px;}
+}
+@media all and (max-width: 1199px) {
+  body section.book iframe {
+ margin: 84px auto;}
+}
+@media all and (max-width: 991px) {
+  body section.book iframe {
+ margin: 84px auto;}
+}
+@media all and (max-width: 767px) {
+  body section.book iframe {
+ margin: 34px auto;}
+}
+@media all and (max-width: 1199px) {
+  body section.book iframe {
+ width: 509px;}
+}
+@media all and (max-width: 991px) {
+  body section.book iframe {
+ width: 509px;}
+}
+@media all and (max-width: 767px) {
+  body section.book iframe {
+ width: 300px;}
+}
+@media all and (max-width: 1199px) {
+  body section.book iframe {
+ height: 281px;}
+}
+@media all and (max-width: 991px) {
+  body section.book iframe {
+ height: 281px;}
+}
+@media all and (max-width: 767px) {
+  body section.book iframe {
+ height: 178px;}
 }
  @media only screen and (min-width: 1112px) {
 body section.book {
